# django-opentelemetry

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: test.yml
src/django_opentelemetry/: __about__.py  __init__.py  apps.py  task_signals.py
src/django_opentelemetry/contrib/channels/: middleware.py
tests/: conftest.py  test_task_signals.py
tests/contrib/channels/: test_middleware.py
